<package>
  <name>pcl_object_clustering</name>
  <version>0.1.0</version>
  <description>pcl_object_clustering</description>
  <maintainer email="mahisorn.w@gmail.com">Mahisorn Wongphati</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend> 
  <run_depend>roscpp</run_depend>
  <build_depend>pcl_ros</build_depend> 
  <run_depend>pcl_ros</run_depend>
  <build_depend>sensor_msgs</build_depend> 
  <run_depend>sensor_msgs</run_depend>
  <build_depend>dynamic_reconfigure</build_depend> 
  <run_depend>dynamic_reconfigure</run_depend>
  <build_depend>clustered_clouds_msgs</build_depend>
  <run_depend>clustered_clouds_msgs</run_depend>
</package>
